# py-spinners

./: .gitignore  .gitmodules  .pylintrc  .travis.yml  DEVELOPMENT.md  MANIFEST.in  README.md  README.rst  appveyor.yaml  appveyor.yml  constants.py  examples.py  pattern.py  patterns.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  spinners.py  temp.py  test_spinners.py  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
examples/: examples.py
spinners/: __init__.py  constants.py  spinners.py
tests/: test_spinners.py
