[tool.poetry]
name = "spinners"
version = "0.0.24"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "cfa"
url = "https://nexus3.ittools.cfahome.com/repository/python-all/simple"